Edited layout in html

--- a/index.html
+++ b/index.html
@@ -15,8 +15,11 @@
         </header>
 
     <div class="choices">
-        <label for="price">Price</label>
-        <input type="number" name="price" id="price">
+        <label for="price">
+            <span class="price">Price</span>
+            <input type="number" name="price" id="price">
+        </label>
+        
 
         <button class="tip1">10%</button>
 
